@@ -3,7 +3,7 @@ const semver = require('semver')
 const shimmer = require('../shimmer')
 const { instrumentationS3 } = require('./aws-sdk/s3')
 const { instrumentationSqs } = require('./aws-sdk/sqs')
-const {instrumentationDynamoDb} = require('./aws-sdk/dynamodb.js')
+const { instrumentationDynamoDb } = require('./aws-sdk/dynamodb.js')
 
 const instrumentorFromSvcId = {
   s3: instrumentationS3,
