@@ -4,36 +4,39 @@ const TYPE = 'db'
 const SUBTYPE = 'dynamodb'
 const ACTION = 'query'
 
-function getRegionFromRequest(request) {
+function getRegionFromRequest (request) {
   return request && request.service &&
         request.service.config && request.service.config.region
 }
 
-function getPortFromRequest(request) {
+function getPortFromRequest (request) {
   return request && request.service &&
         request.service.endpoint && request.service.endpoint.port
 }
 
-function getMethodFromRequest(request) {
-  return request && request.operation
+function getMethodFromRequest (request) {
+  const method = request && request.operation
+  if (method) {
+    return method[0].toUpperCase() + method.slice(1)
+  }
 }
 
-function getStatementFromRequest(request) {
+function getStatementFromRequest (request) {
   const method = getMethodFromRequest(request)
-  if('query' === method && request && request.params && request.params.KeyConditionExpression) {
+  if (method === 'Query' && request && request.params && request.params.KeyConditionExpression) {
     return request.params.KeyConditionExpression
   }
   return undefined
 }
 
-function getAddressFromRequest(request) {
+function getAddressFromRequest (request) {
   return request && request.service && request.service.endpoint &&
         request.service.endpoint.host
 }
 
-function getTableFromRequest(request) {
+function getTableFromRequest (request) {
   const table = request && request.params && request.params.TableName
-  if(!table) {
+  if (!table) {
     return ''
   }
   return ` ${table}`
@@ -65,17 +68,16 @@ function instrumentationDynamoDb (orig, origArguments, request, AWS, agent, { ve
   const action = ACTION
   // const action = getActionFromRequest(request)
   const name = getSpanNameFromRequest(request)
-  console.log('creating span: ' + name)
   const span = agent.startSpan(name, type, subtype, action)
-  if(!span) {
+  if (!span) {
     return orig.apply(request, origArguments)
   }
   // span.setDestinationContext(getMessageDestinationContextFromRequest(request))
   // span.setMessageContext(getMessageContextFromRequest(request))
   span.setDbContext({
-    instance:getRegionFromRequest(request),
-    statement:getStatementFromRequest(request),
-    type: SUBTYPE,
+    instance: getRegionFromRequest(request),
+    statement: getStatementFromRequest(request),
+    type: SUBTYPE
   })
   span.setDestinationContext({
     address: getAddressFromRequest(request),
@@ -91,7 +93,6 @@ function instrumentationDynamoDb (orig, origArguments, request, AWS, agent, { ve
   })
 
   request.on('complete', function (response) {
-    console.log(response.httpResponse.body.toString())
     if (response && response.error) {
       const errOpts = {
         skipOutcome: true
@@ -116,5 +117,6 @@ module.exports = {
   getRegionFromRequest,
   getPortFromRequest,
   getStatementFromRequest,
-  getAddressFromRequest
+  getAddressFromRequest,
+  getMethodFromRequest
 }
