@@ -1,7 +1,11 @@
 'use strict'
 module.exports = {
-    query: {
-        request:'',
-        response:''
+  query: {
+    response: {
+      Count: 1,
+      Items:
+                [{ id: { S: '001' }, name: { S: 'Richard Roe' }, number: { N: '1' } }],
+      ScannedCount: 1
     }
+  }
 }
